--- a/src/client/css/modules/header.css
+++ b/src/client/css/modules/header.css
@@ -124,7 +124,7 @@ header {
 }
 
 .bm-cross-button {
-  right: 1.5em;
+  right: 1.5em !important;
   top: 1em;
 }
 
@@ -236,7 +236,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 #logo-menu {
   max-width: 60%;
   border-radius: 4px;
-  margin-top: 2em;
+  margin-top: 1em;
 }
 #logo-menu:hover {
   padding-left: 0;
